# RDK-X5-CEIV-Net-Robot

./: README.md  README_cn.md  run_system.py
Vision__python_Cpp/: CMakeLists.txt  main.py
Vision__python_Cpp/include/: face_engine.h  hand_engine.h
Vision__python_Cpp/src/: bridge.cpp  face_engine.cpp  hand_engine.cpp
